--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/mainStyles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <title>Keagon Brinkhuis | &lt;&gt; Front End Developer &lt;/&gt;</title>
     <link
       rel="shortcut icon"
@@ -15,7 +16,7 @@
   <body>
     <header>
       <div class="header-logo">
-        <img src="./Assets/logo/Keagon Logo@2x.png" alt="" />
+        <span>k.</span>
       </div>
       <nav>
         <div class="wrapper-menu">
@@ -34,11 +35,11 @@
     <section>
       <div class="container container--narrow">
         <div class="landing-section">
-          <p>Hey there <span>👋</span>, I'm</p>
-          <h1>Keagon</h1>
-          <h3>Front End Developer</h3>
-          <p>A creative individual with a passion for development.</p>
-              <button type="submit">Say Hi!</button>
+          <p class="fade-in">Hey there <span class="wave">👋</span>, I'm</p>
+          <h1 class="fade-in">Keagon</h1>
+          <h3 class="fade-in">Front End Developer</h3>
+          <p class="fade-in">A creative individual with a passion for development.</p>
+              <button class="fade-in" type="submit">Say Hi!</button>
         </div>
       </div>
     </section>
@@ -147,5 +148,6 @@
     </footer>
 
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/gsap.js"></script>
   </body>
 </html>
