WIP: Mobile Responsiveness

--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/mainStyles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/MotionPathPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <title>Keagon Brinkhuis | &lt;&gt; Front End Developer &lt;/&gt;</title>
     <link
       rel="shortcut icon"
@@ -70,7 +63,7 @@
       <div class="container container--narrow">
         <div class="project-section">
           <div class="featured-projects-section">
-            <h2 class="text-center on-scroll">Featured Projects</h2>
+            <h2 class="text-center">Featured Projects</h2>
             <div class="featured-project main-block">
               <div class="main-block-left">
                 <h3 class="project-title">Project 1</h3>
@@ -83,16 +76,19 @@
                 </div>
               </div>
               <div class="main-block-right">
-                <p>About project...</p>
-                <p>About project...</p>
-                <p>About project...</p>
-                <p>About project...</p>
+                <div class="project-description">
+                  <p>About project...</p>
+                  <p>About project...</p>
+                  <p>About project...</p>
+                  <p>About project...</p>
+                </div>
+                <div class="project-techstack">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                </div>
               </div>
-              <div class="project-techstack">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JS</span>
-              </div>
+              
             </div>
             <div class="featured-project main-block">
               <div class="main-block-left">
@@ -106,15 +102,17 @@
                 </div>
               </div>
               <div class="main-block-right">
-                <p>About project...</p>
-                <p>About project...</p>
-                <p>About project...</p>
-                <p>About project...</p>
-              </div>
-              <div class="project-techstack">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JS</span>
+                <div class="project-description">
+                  <p>About project...</p>
+                  <p>About project...</p>
+                  <p>About project...</p>
+                  <p>About project...</p>
+                </div>
+                <div class="project-techstack">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                </div>
               </div>
             </div>
           </div>
@@ -172,6 +170,13 @@
       </div>
     </footer>
 
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/MotionPathPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <script src="./scripts/gsap.js"></script>
     <script src="./scripts/script.js"></script>
   </body>
