Added styling and functionality to menu

--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
       </div>
       <nav>
         <div class="wrapper-menu">
-          <div class="line-menu half start"></div>
-          <div class="line-menu"></div>
-          <div class="line-menu half end"></div>
+          <div class="line-menu half start open-line"></div>
+          <div class="line-menu open-line"></div>
+          <div class="line-menu half end open-line"></div>
         </div>
-        <ul class="nav-links">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
+
+        <div class="menu-link-wrapper hidden">
+          <ul class="nav-links">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <section>
