--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <div class="cursor"></div>
     <header>
       <div class="header-logo">
         <span>k.</span>
