Added custom cursor: added scale animation on mouseover and mouseleave

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <span>k.</span>
       </div>
       <nav>
-        <div class="wrapper-menu">
+        <a class="wrapper-menu">
           <div class="line-menu half start open-line"></div>
           <div class="line-menu open-line"></div>
           <div class="line-menu half end open-line"></div>
-        </div>
+        </a>
 
         <div class="menu-link-wrapper hidden">
           <ul class="nav-links">
