WIP: Added scroll animation on project images

--- a/index.html
+++ b/index.html
@@ -70,21 +70,41 @@
             <h2 class="text-center">Featured Projects</h2>
             <div class="featured-project main-block">
               <div class="main-block-left">
-                <h3 class="project-title">Project 1</h3>
-                <div class="project-image-holder">
-                  <img
-                    src="https://via.placeholder.com/400x800.png"
-                    alt=""
-                    class="project-image"
-                  />
-                </div>
+                <h3 class="project-title">Ecommerce Web App</h3>
+                <article class="img">
+                  <div class="img-wrapper">
+                    <div class="img-inner">
+                      <div class="img_container">
+                        <div class="mask">
+                          <img
+                          src="./Assets/project images/walling-2-a9wDBS1KE-unsplash.jpg"
+                          alt=""
+                          class="img-holder"
+                        />
+                        </div>
+                    </div>
+                  </div>
+                </article>
               </div>
               <div class="main-block-right">
                 <div class="project-description">
-                  <p>About project...</p>
-                  <p>About project...</p>
-                  <p>About project...</p>
-                  <p>About project...</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, consequatur. Dignissimos est eaque neque
+                    blanditiis voluptatem quas vel, ab distinctio obcaecati! In
+                    neque temporibus itaque nisi error eos officiis aperiam?
+                  </p>
+                  <ul>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                  </ul>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Mollitia, reiciendis.
+                  </p>
                 </div>
                 <div class="project-techstack">
                   <span>HTML</span>
@@ -92,25 +112,44 @@
                   <span>JS</span>
                 </div>
               </div>
-              
             </div>
             <div class="featured-project main-block">
               <div class="main-block-left">
-                <h3 class="project-title">Project 2</h3>
-                <div class="project-image-holder">
-                  <img
-                    src="https://via.placeholder.com/400x800.png"
-                    alt=""
-                    class="project-image"
-                  />
-                </div>
+                <h3 class="project-title">CRM dashboard</h3>
+                <article class="img">
+                  <div class="img-wrapper">
+                    <div class="img-inner">
+                      <div class="img_container">
+                        <div class="mask">
+                          <img
+                          src="./Assets/project images/walling-2-a9wDBS1KE-unsplash.jpg"
+                          alt=""
+                          class="img-holder"
+                        />
+                        </div>
+                    </div>
+                  </div>
+                </article>
               </div>
               <div class="main-block-right">
                 <div class="project-description">
-                  <p>About project...</p>
-                  <p>About project...</p>
-                  <p>About project...</p>
-                  <p>About project...</p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, consequatur. Dignissimos est eaque neque
+                    blanditiis voluptatem quas vel, ab distinctio obcaecati! In
+                    neque temporibus itaque nisi error eos officiis aperiam?
+                  </p>
+                  <ul>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                  </ul>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Mollitia, reiciendis.
+                  </p>
                 </div>
                 <div class="project-techstack">
                   <span>HTML</span>
@@ -174,13 +213,14 @@
       </div>
     </footer>
 
-   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/MotionPathPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
     <script src="./scripts/gsap.js"></script>
     <script src="./scripts/script.js"></script>
   </body>
