WIP: Added numbers to sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <p class="fade-in">
             A creative individual with a passion for development.
           </p>
-          <button class="fade-in" type="submit">Say Hi!</button>
+          <div class="contact-btn fade-in">
+            <a href="mailto:keaggzb20v@gmail.com" target="_blank">Say Hi!</a>
+          </div>
         </div>
       </div>
     </section>
@@ -60,6 +62,9 @@
             A team player who is always up for a challenge when it comes to
             getting the job done.
           </p>
+          <div class="section-number">
+            <span>1</span>
+          </div>
         </div>
       </div>
     </section>
@@ -159,6 +164,9 @@
               </div>
             </div>
           </div>
+          <div class="section-number">
+            <span>2</span>
+          </div>
         </div>
       </div>
     </section>
@@ -169,6 +177,9 @@
           <img src="https://via.placeholder.com/250x250.png" alt="" />
           <p>Cool Cool Cool...</p>
           <span>- By Someone</span>
+          <div class="section-number">
+            <span>3</span>
+          </div>
         </div>
       </div>
     </section>
