Added gulpfile - Split up scss files into partials

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/mainStyles.css" />
+    <link rel="stylesheet" href="./Assets/main.css" />
     <title>Keagon Brinkhuis | &lt;&gt; Front End Developer &lt;/&gt;</title>
     <link
       rel="shortcut icon"
@@ -45,7 +45,7 @@
             A creative individual with a passion for development.
           </p>
           <div class="contact-btn fade-in">
-            <a href="mailto:keaggzb20v@gmail.com" target="_blank">Say Hi!</a>
+            <a href="mailto:keaggzb20v@gmail.com" target="_blank" title="Reach Out!">Say Hi!</a>
           </div>
         </div>
       </div>
@@ -233,6 +233,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
     <script src="./scripts/gsap.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
