Added meta tag for description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Keagon's Developer Portfolio">
     <link rel="stylesheet" href="./Assets/main.css" />
     <title>Keagon Brinkhuis | &lt;&gt; Front End Developer &lt;/&gt;</title>
     <link
@@ -27,10 +28,10 @@
 
         <div class="menu-link-wrapper hidden">
           <ul class="nav-links">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -219,7 +220,7 @@
           <div class="footer-logo">
             <img src="./Assets/logo/Keagon Logo@2x.png" alt="" />
           </div>
-          <p>© 2021 | Built by <a href="">Keagon Brinkhuis</a></p>
+          <p>© 2021 | Built by <a href="https://github.com/Keagon98">Keagon Brinkhuis</a></p>
         </div>
       </div>
     </footer>
