--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </section>
     <footer>
-      <div class="container container--narrow">
+      <div class="container">
         <div class="footer-section">
           <div class="footer-logo">
             <img src="./Assets/logo/Keagon Logo@2x.png" alt="" />
