--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="text-center">Featured Projects</h2>
             <main class="container">
               <section class="card" data-aos="fade-right">
-                <img src="./Assets/project images/walling-2-a9wDBS1KE-unsplash-min.jpg" alt=""/>
+                <img src="./Assets/project images/walling-2-a9wDBS1KE-unsplash-min.jpg" alt="Project 1 Image"/>
                 <div>
                   <h3>eCommerce Store</h3>
                   <p>
@@ -89,7 +89,7 @@
               </section>
         
               <section class="card" data-aos="fade-left">
-                <img src="./Assets/project images/walling-2-a9wDBS1KE-unsplash-min.jpg" alt="" />
+                <img src="./Assets/project images/walling-2-a9wDBS1KE-unsplash-min.jpg" alt="Project 2 Image" />
                 <div>
                   <h3>eCommerce Store</h3>
                   <p>
@@ -143,7 +143,7 @@
                 </label>
               </div>
               <div class="email-input">
-                <input type="email" name="email" id="email" required/>
+                <input type="text" name="email" required/>
                 <label for="email" class="label-email">
                   <span class="content-email">Email</span>
                 </label>
